fixed wrapping

--- a/assets/style/challenge/mobilefirst.css
+++ b/assets/style/challenge/mobilefirst.css
@@ -91,5 +91,6 @@
   #pinned-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
   }
 }
